# QT_uni

./: README.md  cat_sab.sh
PersonalOrganizer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1/: lr1.md
lab1/src/: mainwindow.cpp
lab10/: lr10.md
lab11/: ru.template.laba11.desktop  ru.template.laba11.pro
lab11/Addons/: ru.template.laba11.pro  ru.template.laba11.pro.user.482e297  ru.template.laba11.pro.user.b60bb6c
lab11/Addons/rpm/: ru.template.laba11.spec
lab11/Addons/src/: main.cpp
lab11/Addons/translations/: ru.template.laba11-ru.ts  ru.template.laba11.ts
lab11/qml/pages/: MainPage.qml
lab11/rpm/: ru.template.laba11.changes.in  ru.template.laba11.changes.run.in
lab11/src/: main.cpp
lab11/translations/: ru.template.laba11-ru.ts  ru.template.laba11.ts
lab12/: ru.template.lr12.desktop  ru.template.lr12.pro  ru.template.lr12.pro.user.50e0ada
lab12/qml/: source.qrc
lab12/qml/cover/: DefaultCoverPage.qml
lab12/qml/pages/: MainPage.qml
lab12/rpm/: ru.template.lr12.changes.in  ru.template.lr12.changes.run.in  ru.template.lr12.spec
lab12/src/: main.cpp
lab12/translations/: ru.template.lr12-ru.ts  ru.template.lr12.ts
lab13/: ru.template.lr13.desktop  ru.template.lr13.pro
lab13/qml/: sound.qrc
lab13/qml/cover/: DefaultCoverPage.qml
lab13/qml/pages/: DialogSum.qml  MainPage.qml
lab13/rpm/: ru.template.lr13.changes.in  ru.template.lr13.changes.run.in  ru.template.lr13.spec
lab13/src/: main.cpp
lab13/translations/: ru.template.lr13-ru.ts  ru.template.lr13.ts
lab14/: ru.template.laba14.desktop  ru.template.laba14.pro
lab14/qml/cover/: DefaultCoverPage.qml
lab14/qml/pages/: MainPage.qml
lab14/rpm/: ru.template.laba14.changes.in  ru.template.laba14.changes.run.in  ru.template.laba14.spec
lab14/src/: main.cpp  systemservice.cpp  systemservice.h
lab15/: 1_raw.txt  Answer_1.md  Answer_2.md
lab15/animations_aurora/: ru.auroraos.Animations.pro
lab15/animations_aurora/qml/: Animations.qml
lab15/animations_aurora/rpm/: ru.auroraos.Animations.spec
lab15/animations_aurora_addon/: ru.auroraos.Animations.desktop
lab15/animations_aurora_addon/qml/: Animations.qml
lab15/animations_aurora_addon/src/: main.cpp
lab16/: ru.template.laba16.desktop  ru.template.laba16.pro
lab16/qml/: laba16.qml
lab16/qml/cover/: DefaultCoverPage.qml
lab16/qml/pages/: LolPage.qml  WeatherGlitcher.js
lab16/rpm/: ru.template.laba16.changes.in  ru.template.laba16.changes.run.in
lab16/src/: main.cpp
lab16/translations/: ru.template.laba16-ru.ts  ru.template.laba16.ts
lab17/: ru.template.laba16.desktop  ru.template.laba16.pro
lab17/qml/: laba16.qml
lab17/qml/pages/: CitySearchPage.qml  MainPage.qml  WeatherFetcher.js
lab17/rpm/: ru.template.laba16.spec
lab17/translations/: ru.template.laba16-ru.ts  ru.template.laba16.ts
lab2/: lr2.md
lab2/src/: CMakeLists.txt  data_processor.h
lab2/src/src2_part1/: CMakeLists.txt  mainwindow.ui
lab2/src/src2_part1_addon1/: data_processor.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/src/src2_part1_addon1_addon/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/src/src2_part2/: mainwindow.cpp  mainwindow.h
lab2/src/src2_part2_addon2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/src/src2_part3/: CMakeLists.txt  data_processor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/src/src2_part3_addon3/: advanced_data_processor.cpp  mainwindow.cpp  (+3 more)
lab2/src2_part1/: mainwindow.cpp  mainwindow.h
lab2/src2_part2/: mainwindow.ui
lab3/: diff.txt  lr3.md
lab3/BookCatalog/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab3/BookCatalog_addon1/: mainwindow.cpp  mainwindow.ui
lab3/BookCatalog_addon2/: editbookdialog.cpp  mainwindow.cpp  mainwindow.h
lab3/BookCatalog_addon3/: editbookdialog.h  editbookdialog.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab3/BookCatalog_addon4/: CMakeLists.txt  editbookdialog.cpp  mainwindow.cpp  mainwindow.h
lab3/BookCatalog_addons4/: editbookdialog.h  editbookdialog.ui  mainwindow.cpp  mainwindow.ui
lab4/: lr4.md
lab4/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  progressindicator.cpp
lab4/src_addon/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  progressindicator.h  spiralprogressindicator.cpp  spiralprogressindicator.h
lab5/: lr5.md
lab5/src_addon/: commands.h  customgraphicsscene.cpp  customgraphicsscene.h  graphiccontroller.cpp  graphiccontroller.h  graphicmodel.cpp  graphicmodel.h  mainwindow.cpp  mainwindow.h  shape.cpp  shape.h
lab6/: lr6.md
lab6/WeatherApp/: WeatherFetcher.js  main.cpp
lab6/WeatherApp_Addon/: CMakeLists.txt  Main.qml  WeatherFetcher.js
lab7/: external_database.db  lr7.md
lab7/lab77/: CMakeLists.txt  database.cpp  database.h  main.cpp  main.qml
lab7/lab77_addon/: aaa.xlsx  external_database.db
lab7/lab77_addon/laba77/: CMakeLists.txt  database.cpp  database.h  main.cpp  main.qml
lab7/lab77_addon/laba77/QXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxabstractsheet.cpp  xlsxcell.cpp  xlsxcelllocation.cpp  xlsxcellrange.cpp  xlsxcolor.cpp  xlsxconditionalformatting.cpp  xlsxdatavalidation.cpp  xlsxdatetype.cpp  xlsxdocpropscore.cpp  xlsxdocument.cpp  xlsxdrawing.cpp  xlsxdrawinganchor.cpp  xlsxformat.cpp  xlsxnumformatparser.cpp  xlsxsharedstrings.cpp  xlsxworkbook.cpp  xlsxworksheet.cpp  xlsxzipwriter.cpp
lab8/: lr8.md
lab8/file_searcher/: CMakeLists.txt  filesearcher.cpp  filesearcher.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab8/lab8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab9/: lr9.md
lab9/BluetoothEmulator/: CMakeLists.txt  deviceemulator.cpp  deviceemulator.h  deviceselectiondialog.cpp  mainwindow.cpp  mainwindow.h
lab9/lab9_addon/bluetoothEmulator/: CMakeLists.txt  deviceemulator.cpp  deviceemulator.h  mainwindow.cpp  mainwindow.h
laba2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
labs/lab1/: lr1.md
lr15/: lr15.md
qt_lab0/: CMakeLists.txt  main.cpp
src/: graphiccontroller.cpp  graphiccontroller.h  graphicmodel.cpp  graphicmodel.h  mainwindow.cpp  mainwindow.h  shape.cpp  shape.h
(+20 files in other folders)
